@@ -11,6 +11,10 @@ PHP                                                                        NEWS
     (Nikita, Laruence)
   . Fixed bug #75698 (Using @ crashes php7.2-fpm). (Nikita)
 
+- PDO:
+  . Fixed bug #75616 (PDO extension doesn't allow to be built shared on Darwin).
+    (jdolecek)
+
 - PDO MySQL:
   . Fixed bug #75615 (PDO Mysql module can't be built as module). (jdolecek)
 
